after images and links

--- a/index.html
+++ b/index.html
@@ -18,30 +18,29 @@
           <strong>consectetuer adipiscing elit</strong>. Aenean commodo ligula
           eget dolor. Aenean massa.
           <em>Cum sociis natoque penatibus et magnis dis parturient montes</em>,
-          nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque
-          eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede
-          justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim
-          justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum
-          felis eu pede mollis pretium.
+          nascetur ridiculus mus.
         </p>
         <!-- comment for second article-->
-        <h2>second article</h2>
-        <p>
-          <strong> tincidunt</strong>. Cras dapibus. Vivamus elementum semper
-          nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor
-          eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus
-          in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus
-          varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi
-          vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam
-          rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam
-          semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc,
-          blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio
-          et ante tincidunt tempus. Donec vitae sapien ut libero venenatis
-          faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus
-          tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales
-          sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit
-          cursus nunc,
-        </p>
+        <h2>shopping list of your favorite foods</h2>
+        <ul>
+          <li>liver</li>
+          <li>banana</li>
+          <li>juice</li>
+        </ul>
+        <h2>todo’s you need to get done today</h2>
+        <ol start="5" reversed>
+          <li>learn html</li>
+          <li>learn git</li>
+          <li value="50">clean the car</li>
+          <li>visit friends</li>
+        </ol>
+        <h2>Html Tags</h2>
+        <dl>
+          <dt>strong</dt>
+          <dd>to give important to text</dd>
+          <dt>em</dt>
+          <dd>to give emphisis to text</dd>
+        </dl>
       </section>
       <footer></footer>
     </main>
