Starting styling marketx

--- a/odinProject/projects/marketx/index.html
+++ b/odinProject/projects/marketx/index.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>recipes</title>
+    <title>Market x</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <h1 dir="auto">وصفات أودن</h1>
+    <h1 dir="auto">Market x</h1>
     <ol dir="auto">
-      <li><a href="./recipes/liver.html">الكبدة الاسكندراني</a></li>
-      <li><a href="./recipes/pizza.html">البيتزا</a></li>
-      <li><a href="./recipes/shawerma.html">الشاورما</a></li>
+      <li>
+        <a href="./desserts/biscuitsCookies.html">Biscuits And Cookies</a>
+      </li>
+      <li><a href="./desserts/chocolate.html">Chocolate</a></li>
+      <li><a href="./desserts/cakes.html">Cakes</a></li>
     </ol>
   </body>
 </html>
